# lnk_parser

./: CMakeLists.txt  DestList.cpp  DestList.h  DestListEntry.cpp  DestListEntry.h  DestListEntryArray.cpp  DestListEntryArray.h  DestListHeader.cpp  DestListHeader.h  ExtraData.cpp  ExtraData.h  ExtraDataConstants.h  LinkInfo.cpp  LinkInfo.h  LinkInfoConstants.h  LinkTargetIDList.cpp  LinkTargetIDList.h  ParserUtils.h  README.md  ReadStream.cpp  ReadStream.h  ShellLink.cpp  ShellLink.h  ShellLinkAndJumpListHandler.cpp  ShellLinkAndJumpListHandler.h  ShellLinkHeader.cpp  ShellLinkHeader.h  ShellLinkHeaderConstants.h  ShellLinkHeader_Test.cpp  ShellLinkHeader_Test.h  StringData.cpp  StringData.h  Utils.cpp  Utils.h  UtilsConstant.h  main.cpp
doxygen/: Doxyfile
source/: main.cpp
source/jumpListStructure/: DestList.cpp  DestList.h  DestListEntryArray.cpp  DestListEntryArray.h  DestListHeader.cpp  DestListHeader.h
source/lnkStructure/: ExtraData.cpp  ExtraData.h  ExtraDataConstants.h  ExtraDataUtils.cpp  ExtraDataUtils.h  LinkInfo.cpp  LinkInfo.h  LinkInfoConstants.h  LinkTargetIDList.cpp  LinkTargetIDList.h  ShellLink.cpp  ShellLink.h  ShellLinkHeader.cpp  ShellLinkHeader.h  ShellLinkHeaderConstants.h  StringData.cpp  StringData.h
source/utils/: ParserUtils.cpp  ParserUtils.h  ReadStream.cpp  ReadStream.h  ShellLinkAndJumpListHandler.cpp  ShellLinkAndJumpListHandler.h  Utils.cpp  Utils.h  UtilsConstant.h
test/: 43929ae4535c8dea.automaticDestinations-ms  Opera.lnk  valgr_res_lnk
